[project]
name = "company-intelligence-agent"
version = "1.0.0"
description = "Multi-agent company research system built with CrewAI, FastAPI, and Gradio"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.119.0",
    "duckduckgo-search>=6.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gradio>=5.0.0",
    "agentops>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
